--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
                     <div class="bio">
                         <h1>Md. Imtiaj Uddin</h1>
                         <h2>Programmer</h2>
-                        <ul>
+                        <ul class="bio-lists">
                             <li class="mobile">
-                                <a><i class="fas fa-phone-square-alt"></i><span>01876-293762</span></a>
+                                <a
+                                    ><div class="icon-div"><i class="fas fa-phone-square-alt"></i></div>
+                                    <span>01876-293762</span></a
+                                >
                             </li>
                             <li class="email">
                                 <a href="mailto:imtiazrafi199918@gmail.com"
                                     ><i class="far fa-envelope"></i> <span>imtiazrafi199918@gmail.com</span></a
                                 >
+                            </li>
+                            <li class="location">
+                                <a><i class="fas fa-map-marker-alt"></i><span>Chittagong, Bangladesh.</span></a>
                             </li>
                             <li class="github">
                                 <a href="https://github.com/Imtiaz-Rafi"
@@ -37,6 +43,7 @@
                                     ><i class="fab fa-linkedin"></i> <span>Imtiaz Rafi</span></a
                                 >
                             </li>
+                            <!--  -->
                         </ul>
                     </div>
                 </nav>
@@ -52,8 +59,8 @@
             </div>
             <div class="card-body">
                 <h3 class="card-top">Educational Career</h3>
-                <ul class="blue-back">
-                    <li class="edu-lists">
+                <ul class="">
+                    <li class="edu-lists blue-back">
                         <h4 class="inst-name">Port City International University</h4>
                         <h5 class="exam-name">B.Sc. in Computer Science & Engineering</h5>
                         <p class="duration-time">Sep 2018 - Present</p>
@@ -74,7 +81,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="edu-lists">
+                    <li class="edu-lists blue-back">
                         <h4 class="inst-name">Chittagong Govt. Model College</h4>
                         <h5 class="exam-name">Higher Secondary School Certificate</h5>
                         <p class="duration-time">2015 - 2017</p>
@@ -84,7 +91,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="edu-lists">
+                    <li class="edu-lists blue-back">
                         <h4 class="inst-name">P.D.B High School, Chittagong</h4>
                         <h5 class="exam-name">Secondary School Certificate</h5>
                         <p class="duration-time">- 2015</p>
@@ -98,53 +105,84 @@
             </div>
             <div class="card-body">
                 <h3 class="card-top">Contact Details</h3>
+                <ul class="blue-back"></ul>
             </div>
             <div class="card-body">
                 <h3 class="card-top">Programming Stack</h3>
                 <ul class="blue-back">
                     <li>
-                        <h4 class="language-heading">Programming Language</h4>
+                        <h4 class="language-heading">Programming Language :</h4>
                         <div class="pad15">
                             <ul class="language-list">
                                 <li>
                                     C/C++
-                                    <progress id="prog-lang" value="50" max="100">50</progress>
+                                    <div id="progress" class="p80"></div>
                                 </li>
-                                <li>PYTHON</li>
-                                <li>JAVASCRIPT (ES6)</li>
+                                <li>
+                                    PYTHON
+                                    <div id="progress" class="p50"></div>
+                                </li>
+                                <li>
+                                    JAVASCRIPT (ES6)
+                                    <div id="progress" class="p60"></div>
+                                </li>
                             </ul>
                         </div>
                     </li>
                     <li>
-                        <h4 class="language-heading">Front End</h4>
+                        <h4 class="language-heading">Front End :</h4>
                         <div class="pad15">
                             <ul class="language-list">
-                                <li>REACT.JS</li>
-                                <li>BOOTSTRAP</li>
-                                <li>HTML5</li>
-                                <li>CSS3</li>
+                                <li>
+                                    REACT.JS
+                                    <div id="progress" class="p60"></div>
+                                </li>
+                                <li>
+                                    BOOTSTRAP
+                                    <div id="progress" class="p70"></div>
+                                </li>
+                                <li>
+                                    HTML5
+                                    <div id="progress" class="p70"></div>
+                                </li>
+                                <li>
+                                    CSS3
+                                    <div id="progress" class="p70"></div>
+                                </li>
                             </ul>
                         </div>
                     </li>
                     <li>
-                        <h4 class="language-heading">Back End</h4>
+                        <h4 class="language-heading">Back End :</h4>
                         <div class="pad15">
                             <ul class="language-list">
-                                <li>NODE.JS</li>
-                                <li>PHP</li>
+                                <li>
+                                    NODE.JS
+                                    <div id="progress" class="p70"></div>
+                                </li>
+                                <li>
+                                    PHP
+                                    <div id="progress" class="p60"></div>
+                                </li>
                             </ul>
                         </div>
                     </li>
                     <li>
-                        <h4 class="language-heading">DataBase</h4>
+                        <h4 class="language-heading">DataBase :</h4>
                         <div class="pad15">
                             <ul class="language-list">
-                                <li>MONGODB</li>
-                                <li>MYSQL</li>
+                                <li>
+                                    MONGODB
+                                    <div id="progress" class="p80"></div>
+                                </li>
+                                <li>
+                                    MYSQL
+                                    <div id="progress" class="p90"></div>
+                                </li>
                             </ul>
                         </div>
                     </li>
-                    <li>
+                    <!-- <li>
                         <h4 class="language-heading">Editor Used</h4>
                         <div class="pad15">
                             <ul class="language-list">
@@ -153,12 +191,15 @@
                                 <li>CODEBLOCKS</li>
                             </ul>
                         </div>
-                    </li>
+                    </li> -->
                     <li>
-                        <h4 class="language-heading">Others</h4>
+                        <h4 class="language-heading">Others :</h4>
                         <div class="pad15">
                             <ul class="language-list">
-                                <li>GIT & GITHUB</li>
+                                <li>
+                                    GIT & GITHUB
+                                    <div id="progress" class="p90"></div>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -166,15 +207,46 @@
             </div>
             <div class="card-body">
                 <h3 class="card-top">Competitive Programming</h3>
-                <p>
-                    Participate in 12+ inter and intra programming contest including ICPC preliminary. Participate in
-                    120+ online contest in different Online Judge Solved 1400+ problem in different online judge and
-                    1000+ problem in Codeforces. Codeforces Handle: Imtiaz_rafi, Max rating: 1381 StopStalk Profile :
-                    Imtiaz Rafi
-                </p>
+                <ul class="blue-back cp">
+                    <li>Participate in <b>12+</b> inter and intra programming contest including ICPC preliminary.</li>
+                    <li>
+                        Participate in <b>120+</b> online contest in different Online Judge Solved <b>1400+</b>
+                        problem in different online judge and 1000+ problem in Codeforces.
+                    </li>
+                    <li>
+                        Codeforces Handle: <a href="https://codeforces.com/profile/Imtiaz_rafi">Imtiaz_rafi</a>,
+                        <b>Max rating: 1381</b>
+                    </li>
+                    <li>
+                        StopStalk Profile : <a href="https://www.stopstalk.com/user/profile/Imtiaz_rafi">Imtiaz Rafi</a>
+                    </li>
+                </ul>
+                <p></p>
             </div>
             <div class="card-body">
                 <h3 class="card-top">Academic Projects</h3>
+                <ul>
+                    <li class="blue-back">
+                        <h4><a class="project-name" href="https://github.com/Imtiaz-Rafi/Foodflex">FOODFLEX</a></h4>
+                        <p class="duration-time">May 2021 - Aug 2021</p>
+                        <div>
+                            <p class="relavent-course">Tools Used:</p>
+                            <ul class="education-desc">
+                                <li>Frontend - HTML, CSS, Bootstrap</li>
+                                <li>Backend - PHP</li>
+                                <li>Database - MySQL</li>
+                                <li>IDE - notepad++, VS Code</li>
+                            </ul>
+                            <p class="relavent-course">
+                                Source code is available on <a href="https://github.com/Imtiaz-Rafi/Foodflex">Github</a>
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <h3 class="card-top">Refference</h3>
+                <ul class="blue-back"></ul>
             </div>
         </div>
     </body>
