--- a/index.html
+++ b/index.html
@@ -27,20 +27,26 @@
                             </li>
                             <li class="email">
                                 <a href="mailto:imtiazrafi199918@gmail.com"
-                                    ><i class="far fa-envelope"></i> <span>imtiazrafi199918@gmail.com</span></a
+                                    ><div class="icon-div"><i class="far fa-envelope"></i></div>
+                                    <span>imtiazrafi199918@gmail.com</span></a
                                 >
                             </li>
                             <li class="location">
-                                <a><i class="fas fa-map-marker-alt"></i><span>Chittagong, Bangladesh.</span></a>
+                                <a
+                                    ><div class="icon-div"><i class="fas fa-map-marker-alt"></i></div>
+                                    <span>Chittagong, Bangladesh.</span></a
+                                >
                             </li>
                             <li class="github">
                                 <a href="https://github.com/Imtiaz-Rafi"
-                                    ><i class="fab fa-github"></i> <span>Imtiaz-Rafi</span></a
+                                    ><div class="icon-div"><i class="fab fa-github"></i></div>
+                                    <span>Imtiaz-Rafi</span></a
                                 >
                             </li>
                             <li class="linkedin">
                                 <a href="https://www.linkedin.com/in/imtiaz-rafi/"
-                                    ><i class="fab fa-linkedin"></i> <span>Imtiaz Rafi</span></a
+                                    ><div class="icon-div"><i class="fab fa-linkedin"></i></div>
+                                    <span>Imtiaz Rafi</span></a
                                 >
                             </li>
                             <!--  -->
