--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                 <ul class="blue-back"></ul>
             </div>
             <div class="card-body">
+                <h3 class="card-top">Experience</h3>
+                <ul class="blue-back"></ul>
+            </div>
+            <div class="card-body">
                 <h3 class="card-top">Programming Stack</h3>
                 <ul class="blue-back">
                     <li>
