--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h3 class="card-top">Career Objective</h3>
 
                 <p class="objective-text">
-                    Hi, I am a programmer(wanna be a software developer) from Chittagong, Bangladesh, who loves
+                    A self motivated programmer, who loves
                     Programming, Problem-solving, Developing, and Learning. Passionate about taking risks and solving
                     them by communicating and sharing experience and knowledge in an optimized way.
                 </p>
