--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                 <h3 class="card-top">Career Objective</h3>
 
                 <p class="objective-text">
-                    A self motivated programmer, who loves
-                    Programming, Problem-solving, Developing, and Learning. Passionate about taking risks and solving
-                    them by communicating and sharing experience and knowledge in an optimized way.
+                    Programmer with a strong sense of self-motivation who enjoys problem-solving, developing, and learning. Passionate in taking risks and overcoming them by effectively communicating and sharing experience and expertise.
                 </p>
             </div>
             <div class="card-body">
